fix: unnecessary maring causing scrollbars to appear when they don't have to

--- a/web/assets/scss/_custom.scss
+++ b/web/assets/scss/_custom.scss
@@ -91,6 +91,7 @@
 
 // Background glow effect
 body {
+  padding-top: 1rem;
   &::before {
     content: "";
     position: fixed;
