--- a/web/assets/scss/components/_navbar.scss
+++ b/web/assets/scss/components/_navbar.scss
@@ -2,7 +2,7 @@
 
 /* Navbar Component */
 .navbar {
-  margin: 1rem auto;
+  margin: 0 auto;
   max-width: 1140px;
   width: 95%;
   border: 1px solid rgba(255, 255, 255, 0.1);
